# new-contaminant-detection

./: .gitignore  .gitmodules  CMakeLists.txt  derivation.nix  notes.org
app/: CMakeLists.txt  app.cpp  cli.cpp  database.cpp  image.cpp  main.cpp
cmake/: Asio2.cmake  Boost.cmake  Cotire.cmake  Filesystem.cmake  Fmt.cmake  GCloud.cmake  Glad.cmake  Imgui.cmake  Misc.cmake  ModbusCPP.cmake  OpenCV.cmake  Spdlog.cmake  SqliteORM.cmake  Struc.cmake  TaoPQ.cmake  Toml.cmake  Ucm.cmake  Warnings.cmake
config/: config.toml
docs/: Doxyfile.in
driver/: CMakeLists.txt  client.cpp  modbus-master.cpp  modbus-slave.cpp  plc-client.cpp  plc-comm.cpp  server.cpp  test_serialization.cpp  test_struct.cpp
libcloud/: CMakeLists.txt  cloud.hpp  config.cpp  config.hpp  database.cpp  database.hpp  listener.cpp  listener.hpp  storage.cpp  storage.hpp
libcore/: CMakeLists.txt  common.hpp.in  config.cpp  config.hpp  core.hpp  listener.cpp  listener.hpp  state.cpp  state.hpp
libdetector/: CMakeLists.txt  base.cpp  base.hpp  blob.cpp  blob.hpp  detector.hpp  main.cpp  util.cpp  util.hpp  util.inline.hpp
libgui/: CMakeLists.txt  gui.hpp  image_texture.cpp  image_texture.hpp  image_window.cpp  image_window.hpp  manager.cpp  manager.hpp  window.cpp  window.hpp
libmodbus/: CMakeLists.txt  modbus-adu.cpp  modbus-adu.hpp  modbus-adu.inline.hpp  modbus-bit-read.cpp  modbus-bit-read.hpp  modbus-bit-read.inline.hpp  modbus-bit-write.cpp  modbus-bit-write.hpp  modbus-connection-manager.cpp  modbus-connection-manager.hpp  modbus-connection.cpp  modbus-connection.hpp  modbus-constants.hpp  modbus-data-table.cpp  modbus-data-table.hpp  modbus-data-table.inline.hpp  modbus-exception.hpp  modbus-logger.cpp  modbus-logger.hpp  modbus-operation.cpp  modbus-operation.hpp  modbus-register-read.cpp  modbus-register-read.hpp  modbus-register-read.inline.hpp  modbus-register-write.cpp  modbus-register-write.hpp  modbus-request-handler.cpp  modbus-request-handler.hpp  modbus-request.cpp  modbus-request.hpp  modbus-request.inline.hpp  modbus-response.cpp  modbus-response.hpp  modbus-response.inline.hpp  modbus-server.cpp  modbus-server.hpp  modbus-types.hpp  modbus-utilities.hpp  modbus.hpp
libnetworking/: CMakeLists.txt  README.md  modbus-config.cpp  modbus-config.hpp  modbus-listener.cpp  modbus-listener.hpp  modbus-tcp.cpp  modbus-tcp.hpp  modbus-window.cpp  modbus-window.hpp  modbus.cpp  modbus.hpp  networking.hpp
libserver/: CMakeLists.txt  config.cpp  config.hpp  data-mapper.cpp  data-mapper.hpp  data-window.cpp  data-window.hpp  logger.cpp  logger.hpp  server.hpp  slave.cpp  slave.hpp
libstorage/: CMakeLists.txt  database.cpp  database.hpp  internal-database.cpp  internal-database.hpp  listener.cpp  listener.hpp  schema.hpp  storage.hpp
libutil/: array.hpp  bit.hpp  boolean.hpp  filesystem.hpp  macros.hpp  timer.hpp  types.hpp  util.hpp
